<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_contents"
        android:icon="@drawable/ic_fridge_black_24dp"
        android:title="@string/title_contents" />

    <item
        android:id="@+id/navigation_checkin"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/title_checkin" />
    <item
        android:id="@+id/navigation_recipes"
        android:icon="@drawable/ic_recipe_black_24dp"
        android:title="@string/title_recipes" />
    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/title_shopping" />

</menu>
