<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dk.sdu.student.kitcheninventory.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_contents"
        android:name="dk.sdu.student.kitcheninventory.ui.contents.InventoryFragment"
        android:label="@string/title_contents"
        tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/navigation_checkin"
        android:name="dk.sdu.student.kitcheninventory.ui.checkin.CheckInFragment"
        android:label="@string/title_checkin"
        tools:layout="@layout/fragment_checkin" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="dk.sdu.student.kitcheninventory.ui.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/navigation_shopping"
        android:name="dk.sdu.student.kitcheninventory.ui.shopping.ShoppingFragment"
        android:label="@string/title_shopping"
        tools:layout="@layout/fragment_shopping" />
</navigation>